<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_screen_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_versus_title"
        android:gravity="center"
        style="@style/TransformerTextStyle42"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/versus_layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/versus_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/battle_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/autobot_team_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/versus_label">

            <ImageView
                android:id="@+id/autobot_icon"
                android:layout_width="@dimen/versus_fragment_icon_size"
                android:layout_height="@dimen/versus_fragment_icon_size"
                android:layout_marginEnd="@dimen/space_24dp"
                android:src="@drawable/autobot_summon_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/autobot_team"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/autobot_team"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/autobot_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/versus_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/versus_fragment_vs_label"
            android:gravity="center"
            style="@style/TransformerTextStyle42"
            app:layout_constraintTop_toBottomOf="@id/autobot_team_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/decepticon_team_layout"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/decepticon_team_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/versus_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/decepticon_icon"
                android:layout_width="@dimen/versus_fragment_icon_size"
                android:layout_height="@dimen/versus_fragment_icon_size"
                android:layout_marginStart="@dimen/space_24dp"
                android:src="@drawable/decepticon_summon_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/decepticon_team"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/decepticon_team"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/decepticon_icon"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/battle_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/versus_fragment_battle_button_label"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        style="@style/TransformerTextStyle24"
        app:layout_constraintTop_toBottomOf="@id/versus_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>